--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit
 openai==1.3.6
-pandas==2.1.1
+pandas==2.1.4
+numpy==1.26.4
 elevenlabs==0.2.21
 stability-sdk==0.4.0
 python-dotenv==1.0.0
